fix: image shifting layout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,19 @@
     @apply bg-background text-foreground;
     font-family: 'Walsheim', sans-serif;
   }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  .fadeIn {
+    animation: fadeIn 0.5s ease-in-out forwards;
+  }
 }
 
 @layer base {
